Add add-opens flag for failsafe due to failures in java 17 on ubuntu with all ITs which are asking for it to be added